Set focus in Trades dialog. Put Trades dialog buttons in Flex row. Add hack to TradeCell/styles.css to prevent dialog window clipping.

--- a/src/components/Charts/ChartDashboard/dialogdashboardform.css
+++ b/src/components/Charts/ChartDashboard/dialogdashboardform.css
@@ -44,7 +44,7 @@ dialog {
 }
 
 .dialog-form-confirm {
-  width: 420px;
+  width: 440px;
 }
 .dialog-form-edit {
   width: 280px;
